fixed body overflow when modal is open

--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,6 @@ p, ul, label, h1, h2, h3, h4, h5 {
   color: #E2CBB6;
 }
 
-body {
-  overflow: hidden;
-}
-
 .black-fill {
   width: 100%;
   height: 100vh;
@@ -1595,6 +1591,7 @@ body {
   }
   .header-nav li a {
     padding: 15px;
+    font-size: 20px;
   }
   .header-nav__active {
     display: block;
