--- a/sass/components/_modals.sass
+++ b/sass/components/_modals.sass
@@ -4,8 +4,6 @@
 
 // Login-invited popup
 
-body
-  overflow: hidden
 .black-fill
   width: 100%
   height: 100vh
@@ -15,7 +13,6 @@ body
   z-index: 100
   background-color: rgba(0,0,0,0.3)
   display: none
-  // change later
 .close-modal
   position: absolute
   right: 15px
@@ -33,7 +30,6 @@ body
   left: 50%
   transform: translate(-50%, -50%)
   display: none
-  // change later
   border-radius: 20px
   width: 76vw
 .create-memorial
