--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -716,6 +716,7 @@
       margin: 25px 15px
       & a
         padding: 15px
+        font-size: 20px
   .header-nav__active
     display: block
     top: 60px
